--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
-    <title>H D Jain Collage</title>
+    <title>H D Jain college</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-gray-900 lg:items-center lg:justify-center mb-4 md:mb-0">
                 <img src="./img/hdjc-arrah-logo.svg" alt="" srcset="">
                 </svg>
-                <span class="ml-3 text-xl">H D Jain Collage </span>
+                <span class="ml-3 text-xl">H D Jain college </span>
             </a>
             <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
                 <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Button
@@ -39,7 +39,7 @@
     <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
             <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-8 md:mb-0">
-                <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?Collage,students">
+                <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?college,students">
             </div>
             <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">H.D Jain College,Arrah
