--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
             <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-8 md:mb-0">
-                <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?college,students">
+                <img class="object-cover object-center rounded" alt="hero" src="./img/image1.jpg">
             </div>
             <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">H.D Jain College,Arrah
@@ -55,8 +55,8 @@
                 <p class="mb-4 leading-relaxed">
                     To create an ambience, congenial for academic excellence as well as a cordial fellow-felling.</p>
                 <div class="flex justify-center">
-                    <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">History</button>
-                    <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Principal Message</button>
+                    <a class="mr-5 inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" href="./pages/history.html" target="_blank" rel="History">History</a>
+                    <a class="mr-5 inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" href="./pages/pmsg.html" rel="Principal Message">Principal Message</a>
                 </div>
             </div>
         </div>
