--- a/pages/history.html
+++ b/pages/history.html
@@ -17,7 +17,7 @@
         <div class="container px-5 py-24 mx-auto">
             <div class="flex flex-wrap -m-12">
                 <div class="p-12 md:w-1/2 flex flex-col items-start">
-                    <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xs font-medium tracking-widest">History</span>
+                    <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xm font-medium tracking-widest">History</span>
                     <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">Roof party normcore before they sold out, cornhole vape</h2>
                     <p class="leading-relaxed mb-8">Established on 21st January, 1942, H.D. Jain College, Ara was the first institution of higher learning ever set up in the economically and academically backward region of Shahabad in fact, the first college between Patna and Varansi.
                         'It owes its foundation to the Late Babu Har Prasad Das Jain, a rich landlord and philanthropist of the town. He himself had little formal education but was a great lover of learning and firmly believed that progress and learning
@@ -36,19 +36,15 @@
                         units. The universities were further reorganized in 1962 and this college was again shifted to Patna University but only for a short while. As Magadh University came into being in 1962 itself, all the colleges except those of Patna
                         University under the jurisdiction of Patna division were made its units. H.D.Jain College was made the first constituent unit of Magadh University and was granted permission to impart teaching up to Honors standard in all subjects
                         of Arts, Science and Commerce streams.The college established itself as one of the few leading colleges of Bihar on account of its rich library, well managed reading room, well equipped laboratories, reputed teachers, inspiring
-                        leadership, well regulated discipline and enviable results. One cannot ignore the key role the College Governing Body played in creating, promoting and maintaining a healthy academic atmosphere, high standard of teaching and discipline.
-                        The succeeding G Bs worked devotedly for the all round progress of the college. Setting aside the narrow considerations of caste, creed, community, religion and region, they appointed talented teachers of character solely on merit.
-                        The teachers too devoted themselves to studies, teaching and research with zeal and passion and expanded the dimensions of knowledge by their research works and scholarly writings. With a view to facilitating research the college
-                        G B granted study leave to teachers, sanctioned generous grants for the purchase of reference books and research journals in the college library and extended financial aid to the teachers along with study leave to participate in
-                        and present research papers at seminars and conferences. Moreover, the college G B paid pay and perks to the teachers timely at par with the teachers of Patna College and other government institutions. Seminars, symposia and popular
-                        lectures were regularly organized for the benefit of students and teachers. The college published its magazine regularly and brought out the creative talent of its students, teachers and other members of the staff.</p>
+                        leadership, well regulated discipline and enviable results. One cannot ignore the key role the College Governing Body played in creating, promoting and maintaining a healthy academic atmosphere, high standard of teaching and discipline.</p>
+
                     <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
                         <a class="text-indigo-500 inline-flex items-center">Learn More
             <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M5 12h14"></path>
-              <path d="M12 5l7 7-7 7"></path>
-            </svg>
-          </a>
+                        <path d="M5 12h14"></path>
+                        <path d="M12 5l7 7-7 7"></path>
+                        </svg>
+                        </a>
                         <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
             <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
               <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
@@ -61,17 +57,15 @@
             </svg>6
           </span>
                     </div>
-                    <a class="inline-flex items-center">
-                        <img alt="blog" src="https://dummyimage.com/104x104" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
-                        <span class="flex-grow flex flex-col pl-4">
-            <span class="title-font font-medium text-gray-900">Holden Caulfield</span>
-                        <span class="text-gray-400 text-xs tracking-widest mt-0.5">UI DEVELOPER</span>
-                        </span>
-                    </a>
+                    </a> -->
                 </div>
-                <div class="p-12 md:w-1/2 flex flex-col items-start">
-                    <span class="inline-block py-1 px-2 rounded bg-indigo-50 text-indigo-500 text-xs font-medium tracking-widest"></span>
+                <div class="p-12 md:w-1/2 flex flex-col items-start"><br><br>
                     <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4"></h2><br><br>
+                    <p class="leading-relaxed mb-8"> The succeeding G Bs worked devotedly for the all round progress of the college. Setting aside the narrow considerations of caste, creed, community, religion and region, they appointed talented teachers of character solely on merit.
+                        The teachers too devoted themselves to studies, teaching and research with zeal and passion and expanded the dimensions of knowledge by their research works and scholarly writings. With a view to facilitating research the college
+                        G B granted study leave to teachers, sanctioned generous grants for the purchase of reference books and research journals in the college library and extended financial aid to the teachers along with study leave to participate in
+                        and present research papers at seminars and conferences. Moreover, the college G B paid pay and perks to the teachers timely at par with the teachers of Patna College and other government institutions. Seminars, symposia and popular
+                        lectures were regularly organized for the benefit of students and teachers. The college published its magazine regularly and brought out the creative talent of its students, teachers and other members of the staff.</p>
                     <p class="leading-relaxed mb-8">Conceding the popular demand, Magadh University administration opened P.G. Centers on its campus in 1972 73 and added new feathers to its glory. Initially postgraduate teaching was started in Economics and Political Science but in
                         compliance with the popular demand permission was granted to impart PG teaching in Hindi, Psychology and Chemistry in 1983 84. The college continued its onward journey and got permission for PG teaching in all the subjects of Arts,
                         Science and Commerce streams. By the year 1986 87 H.D. Jain College, elevated itself to become a PG College and got the recognition of the U.G.C. also as a Post Graduate College. Responding favorably to the long pending popular
@@ -79,7 +73,8 @@
                         <br> The college takes pride in the fact that a number of its alumni and teachers rose high and occupied enviable positions in almost all spheres of academic, administrative and public life. Even today the college is striving hard
                         to persist with excellence and reach greater heights. There is no denying the fact that this college is no exception to the noticeable decline in the academic atmosphere and deterioration in the teaching standard in the state.
                         However, the college has left no stone unturned to arrest the declining trend and retain its glory. It doesn't wish to take pride in its past glory; it looks forwards to the future and hopes to gain ground. We firmly believe in
-                        the hoary wisdom of our sages. <br> Men, let your hearts be One; <br> Let your minds be One; <br> Let your ends be One So that you could act in unison <br> And attain all your goals.</p>
+                        the hoary wisdom of our sages.</p>
+                    <p class="leading-relaxed mb-2"> <br> Men, let your hearts be One; <br> Let your minds be One; <br> Let your ends be One So that you could act in unison <br> And attain all your goals.</p>
                     <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
                         <a class="text-indigo-500 inline-flex items-center">Learn More
             <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
