--- a/pages/history.html
+++ b/pages/history.html
@@ -39,29 +39,18 @@
                         leadership, well regulated discipline and enviable results. One cannot ignore the key role the College Governing Body played in creating, promoting and maintaining a healthy academic atmosphere, high standard of teaching and discipline.</p>
 
                     <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
-                        <a class="text-indigo-500 inline-flex items-center">Learn More
+                        <a class="text-indigo-500 inline-flex items-center">continue...
             <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M5 12h14"></path>
                         <path d="M12 5l7 7-7 7"></path>
                         </svg>
                         </a>
-                        <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
-            <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-              <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-              <circle cx="12" cy="12" r="3"></circle>
-            </svg>1.2K
-          </span>
-                        <span class="text-gray-400 inline-flex items-center leading-none text-sm">
-            <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-              <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
-            </svg>6
-          </span>
                     </div>
-                    </a> -->
+                    </a>
                 </div>
                 <div class="p-12 md:w-1/2 flex flex-col items-start"><br><br>
                     <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4"></h2><br><br>
-                    <p class="leading-relaxed mb-8"> The succeeding G Bs worked devotedly for the all round progress of the college. Setting aside the narrow considerations of caste, creed, community, religion and region, they appointed talented teachers of character solely on merit.
+                    <p class="leading-relaxed mb-8"> <br> The succeeding G Bs worked devotedly for the all round progress of the college. Setting aside the narrow considerations of caste, creed, community, religion and region, they appointed talented teachers of character solely on merit.
                         The teachers too devoted themselves to studies, teaching and research with zeal and passion and expanded the dimensions of knowledge by their research works and scholarly writings. With a view to facilitating research the college
                         G B granted study leave to teachers, sanctioned generous grants for the purchase of reference books and research journals in the college library and extended financial aid to the teachers along with study leave to participate in
                         and present research papers at seminars and conferences. Moreover, the college G B paid pay and perks to the teachers timely at par with the teachers of Patna College and other government institutions. Seminars, symposia and popular
@@ -75,12 +64,12 @@
                         However, the college has left no stone unturned to arrest the declining trend and retain its glory. It doesn't wish to take pride in its past glory; it looks forwards to the future and hopes to gain ground. We firmly believe in
                         the hoary wisdom of our sages.</p>
                     <p class="leading-relaxed mb-2"> <br> Men, let your hearts be One; <br> Let your minds be One; <br> Let your ends be One So that you could act in unison <br> And attain all your goals.</p>
-                    <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
-                        <a class="text-indigo-500 inline-flex items-center">Learn More
-            <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <div class="flex items-center flex-wrap pb-2 mb-4 border-b-2 border-gray-100 mt-auto w-full">
+                        <a class="text-indigo-500 inline-flex items-center">Thank You.
+            <!-- <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
               <path d="M5 12h14"></path>
               <path d="M12 5l7 7-7 7"></path>
-            </svg>
+            </svg> -->
           </a>
                         <span class="text-gray-400 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
             <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
@@ -100,7 +89,7 @@
             <span class="title-font font-medium text-gray-900">Alper Kamu</span>
                         <span class="text-gray-400 text-xs tracking-widest mt-0.5">DESIGNER</span>
                         </span>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
