--- a/pages/history.html
+++ b/pages/history.html
@@ -86,10 +86,10 @@
                     <a class="inline-flex items-center">
                         <img alt="blog" src="https://dummyimage.com/103x103" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                         <span class="flex-grow flex flex-col pl-4">
-            <span class="title-font font-medium text-gray-900">Alper Kamu</span>
+            <span class="title-font font-medium text-gray-900">Ayush Singh</span>
                         <span class="text-gray-400 text-xs tracking-widest mt-0.5">DESIGNER</span>
                         </span>
-                    </a> -->
+                    </a>
                 </div>
             </div>
         </div>
